--- a/src/scss/page-types/_interior-page.scss
+++ b/src/scss/page-types/_interior-page.scss
@@ -81,6 +81,10 @@
     @include grid-media('lg') {
       @include padding(11.4rem null);
     }
+
+    > .centered-container {
+      position: relative;
+    }
   }
 }
 
